src/app/pages/indicator/indicator.component.scss
.content-section {
  position: relative;
  max-width: 90rem;
  padding: 10px;
  margin: 60px;
  //width: 984px;
  //height: 56px;
  //left: 299px;
  //top: 155px;
}

.steps-content {
  margin-top: 16px;
  //border: 1px dashed #e9e9e9;
  border-radius: 6px;
  //background-color: #fafafa;
  //min-height: 300px;
  text-align: center;
  background-color: hsla(0,0%,94.9%,.7);
  border: .25rem dashed #c6c6c5

}

.steps-action {
  position: static;
  margin: 10px auto;
  width: fit-content;
}

::ng-deep {
  @media only screen and (max-width: 1200px) {
  th {
    background-color: red;
  }
}
}


.steps-button {
  background: #453457;
  border: 1px solid #ffffff;
  box-sizing: border-box;
  border-radius: 15px;
  padding: 0 1.5rem 0 1.5rem;
  font-family: Montserrat, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 12px;
  line-height: 15px;
  align-items: center;
  text-align: center;
  text-transform: uppercase;
  width: 10rem;

  /* White */

  color: #ffffff;
}
/*
//before selection text color
::ng-deep .ant-steps-item-custom .ant-steps-item-icon > .ant-steps-icon {
 color: white;
}
//starting icon background color
::ng-deep .ant-steps-item-custom .ant-steps-item-icon {
  background: #453457;
  font-size: 1.5rem;
  border-radius: .6rem;
  padding: 0 .3rem .3rem .3rem;
}
//selected text color
::ng-deep .ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
  color: #453457;
}
//icon color after
::ng-deep .ant-steps-item-finish .ant-steps-item-icon > .ant-steps-icon {
  background: #453457;
  color: white;
}
//selected icon color (The step one is currently viewing)
::ng-deep .ant-steps-item-custom.ant-steps-item-process .ant-steps-item-icon > .ant-steps-icon {
  background: #453457;
  color: white;
  font-size: 1.5rem;
}
//text color before
::ng-deep .ant-steps-item-wait > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
  color:  #453457;
  opacity: 0.5;
}
//line color
::ng-deep .ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title::after {
background-color: #453457;
}
*/

//slider
//rail color when hovering
::ng-deep .ant-slider:hover .ant-slider-rail {
  background-color: #a5c2ae;
}
//before color and hover
::ng-deep .ant-slider:hover .ant-slider-track {
  background-color: #a5c2ae;
}
//unused portion of rail
::ng-deep .ant-slider-rail {
  background-color: #a5c2ae;
  opacity: 0.5;
}
//hover color of slider ball
::ng-deep .ant-slider:hover .ant-slider-handle:not(.ant-tooltip-open) {
  border-color: #a5c2ae;
}
//slider button color when hovering
::ng-deep .ant-slider:hover .ant-slider-handle.ant-tooltip-open {
  border-color: #a5c2ae;
}
//after slider color
::ng-deep .ant-slider-track {
  background-color: #453457;
}
::ng-deep .ant-slider:hover .ant-slider-track {
  color: green;
}
::ng-deep .ant-slider-handle {
  background-color: #453457;
  border: solid 2px #453457;
}

//before icon color
::ng-deep .ant-steps-item-wait .ant-steps-item-icon > .ant-steps-icon {
  background: #453457;
  color: white;
  background-color: #453457;
  font-size: 1.5rem;
  border-radius: 0.6rem;
  padding: 0 0.3rem 0.3rem 0.3rem;
  opacity: 0.5;
}

//selected text color
::ng-deep
  .ant-steps-item-process
  > .ant-steps-item-container
  > .ant-steps-item-content
  > .ant-steps-item-title {
  color: #453457;
}
//finished icon color
::ng-deep .ant-steps-item-finish .ant-steps-item-icon > .ant-steps-icon {
  background: #453457;
  color: white;
  background-color: #453457;
  font-size: 1.5rem;
  border-radius: 0.6rem;
  padding: 0 0.3rem 0.3rem 0.3rem;
}
//selected icon color (The tep one is currently viewing)
::ng-deep
  .ant-steps-item-custom.ant-steps-item-process
  .ant-steps-item-icon
  > .ant-steps-icon {
  background: #453457;
  color: white;
  font-size: 1.5rem;
  background-color: #453457;
  font-size: 1.5rem;
  border-radius: 0.6rem;
  padding: 0 0.3rem 0.3rem 0.3rem;
}
//text color before
::ng-deep
  .ant-steps-item-wait
  > .ant-steps-item-container
  > .ant-steps-item-content
  > .ant-steps-item-title {
  color: #453457;
  opacity: 0.5;
}
//line color
::ng-deep
  .ant-steps-item-finish
  > .ant-steps-item-container
  > .ant-steps-item-content
  > .ant-steps-item-title::after {
  background-color: #453457;
}

.stepIcon {
  display: flex;
  position: absolute;
  top: 28%;
  right: 0;
  background: #a5c2ae;
  // padding: 0.5rem;
  border-radius: 0.6rem 0 0 0.6rem;
  font-size: 2rem;
  font-weight: 900;
  color: #ffffff;
  // margin: 1rem 0 1rem 0;
  align-items: center;
  justify-content: center;
  height: 3rem;
  width: 4rem;
}
.stepInfo {
  width: 20rem;
  height: 19rem;
  z-index: 1000;
  overflow: auto;
}
.step2Info {
  width: 20rem;
  height: 19rem;
  overflow: auto;
}
.loading-row{
  top: 70%;
  position: absolute;
  left: 49%;
}
.loading-row i {
  color: #453457;
  font-size:24px !important;
}
/*
  @media only screen and (max-width: 48.5rem) {
    .stepSection{
      position: absolute;
      left: 50%;
      margin-left: -80px;
      width: 12.5rem;
      height: 348px;
      border-radius: .6rem;
      box-shadow: .25rem .35rem .1625rem #00000029;
      max-width: 30rem;
      background: #453457;
    }
  }
  */

// #step1{
//   position: relative;
// }
// #step2{
//   position: relative;
//   right: 20%;
// }
// #step3{
//   position: relative;
//   right: 5%;
// }
// #step4{
//   position: relative;
//   left: 9.75%;
// }
// #step5{
//   position: relative;
//   left: 25%;
// }
// #step6{
//   position: relative;
// }
/*.welcomeLayout{
  background-color:  white;
  align-items: center;
  padding: 3rem;
  }

  .welcomeSection{
  text-align: left;
  padding: 2rem 5rem;
  }
  .welcomeH3{
    padding: 1.5rem 0rem 1.5rem 0rem;
    line-height: 3.5rem;
    font-size: 3rem;
    font-weight: 900;
    text-align: center;
    font-family:montserrat, sans-serif;
    transform: scale(1, 1.5);
    }
  .welcomeMessage{
  font-size:.90rem;
  font-weight: 500;
  line-height: 1rem;
  background-color: rgb(233, 233, 233);
  padding: 25px;
  border-radius: 15px;
  border-top-left-radius: 15px;
  box-shadow: .25rem .35rem .1625rem #00000029;
  max-width: 48rem;
  }*/

.feedbackIcon {
  display: flex;
  position: absolute;
  top: 20%;
  right: 0;
  background: #453457;
  border-radius: 0.6rem 0 0 0.6rem;
  font-size: 1rem;
  font-weight: 700;
  color: #ffffff;
  align-items: center;
  justify-content: center;
  height: 3rem;
  width: 7rem;
}

#uploadButton {
  display: flex;
  position: absolute;
  bottom: 20%;
  right: 0;
  background: #453457;
  border-radius: 0.6rem 0 0 0.6rem;
//  font-size: 1rem;
  font-weight: 700;
  color: #ffffff;
  align-items: center;
  justify-content: center;
  height: 3rem;
//  width: 7rem;
}

